vlib/v/checker/tests/reference_fixed_array_alias_autoderef_err.vv
type FA = [8]int

fn main() {
	mut arr := FA{}
	p := unsafe { &arr } // auto-deref var: `p` behaves as the fixed array value
	q := &p
	_ = q
}
